[gd_scene load_steps=3 format=3 uid="uid://bia1e2sy71npjx"]

[ext_resource type="Script" uid="uid://bvrybd2wajp3" path="res://scripts/ui/relic/relic_panel.gd" id="1_yvnqr"]

[sub_resource type="Resource" id="Resource_kq5vx"]
metadata/__load_path__ = "res://assets/ui/panels/panel_background.png"

[node name="RelicPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvnqr")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("Resource_kq5vx")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "遗物"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="RelicGrid" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 4

[node name="RelicInfoPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="RelicInfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="NameLabel" type="Label" parent="RelicInfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "遗物名称"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="RelicInfoPanel/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="RelicInfoPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 5

[node name="DescriptionLabel" type="Label" parent="RelicInfoPanel/VBoxContainer"]
layout_mode = 2
text = "遗物描述"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="EffectsLabel" type="Label" parent="RelicInfoPanel/VBoxContainer"]
layout_mode = 2
text = "效果:"
vertical_alignment = 1

[node name="EffectsContainer" type="VBoxContainer" parent="RelicInfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="CloseButton" type="Button" parent="RelicInfoPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 30.0
grow_horizontal = 0
text = "X"

[connection signal="pressed" from="RelicInfoPanel/CloseButton" to="." method="_on_close_button_pressed"]
